# PORR_MPI

./: CMakeLists.txt  README.md  jacobi.c  jacobi.h  main.c  program  richardson.c  richardson.h  testFun.c  testFun.h
